--- a/package.json
+++ b/package.json
@@ -1,16 +1,29 @@
 {
   "name": "template-evm-dapp",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "version": "0.1.0",
+  "description": "Monorepo Template for EVM-based dApps.",
+  "license": "MIT",
+  "homepage": "https://github.com/pmuens/template-evm-dapp#readme",
   "repository": {
     "type": "git",
     "url": "git@github-pmuens:pmuens/template-evm-dapp.git"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+  "bugs": {
+    "url": "https://github.com/pmuens/template-evm-dapp/issues"
+  },
+  "author": {
+    "name": "Philipp Muens",
+    "url": "https://github.com/pmuens"
+  },
+  "keywords": [
+    "ethereum",
+    "solidity",
+    "smart-contracts",
+    "dapp",
+    "hardhat",
+    "next"
+  ],
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  }
 }
