--- a/packages/hardhat/.gitignore
+++ b/packages/hardhat/.gitignore
@@ -1,3 +1,5 @@
+artifacts
+cache
 
 # Created by https://www.toptal.com/developers/gitignore/api/linux,macos,windows,vim,emacs,sublimetext,visualstudiocode,intellij+all,node,yarn,solidity
 # Edit at https://www.toptal.com/developers/gitignore?templates=linux,macos,windows,vim,emacs,sublimetext,visualstudiocode,intellij+all,node,yarn,solidity
