--- a/packages/hardhat/package.json
+++ b/packages/hardhat/package.json
@@ -3,7 +3,10 @@
   "version": "0.1.0",
   "description": "Hardhat template for EVM-based dApps.",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "hardhat compile",
+    "clean": "hardhat clean",
+    "dev": "hardhat node --hostname 0.0.0.0",
+    "test": "cross-env TS_NODE_TRANSPILE_ONLY=1 hardhat test",
     "format": "prettier --write . --config .prettierrc.js",
     "lint": "eslint --cache -c .eslintrc.js --fix ."
   },
@@ -13,11 +16,24 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "@nomiclabs/hardhat-ethers": "^2.0.3",
+    "@nomiclabs/hardhat-waffle": "^2.0.1",
+    "@types/chai": "^4.3.0",
+    "@types/fs-extra": "^9.0.13",
+    "@types/mocha": "^9.0.0",
     "@types/node": "^17.0.5",
     "@typescript-eslint/eslint-plugin": "^5.8.0",
     "@typescript-eslint/parser": "^5.8.0",
+    "chai": "^4.3.4",
+    "cross-env": "^7.0.3",
+    "dotenv": "^10.0.0",
     "eslint": "^8.5.0",
     "eslint-config-prettier": "^8.3.0",
+    "ethereum-waffle": "^3.4.0",
+    "ethers": "^5.5.2",
+    "fs-extra": "^10.0.0",
+    "hardhat": "^2.8.0",
+    "mocha": "^9.1.3",
     "prettier": "^2.5.1",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.4"
