Add hardhat-deploy plugin

--- a/packages/hardhat/tsconfig.json
+++ b/packages/hardhat/tsconfig.json
@@ -19,5 +19,5 @@
   },
   "exclude": ["node_modules"],
   "files": ["./hardhat.config.ts"],
-  "include": ["./tasks/**/*", "./tests/**/*"]
+  "include": ["./deploy/**/*", "./tasks/**/*", "./tests/**/*"]
 }
