--- a/packages/hardhat/package.json
+++ b/packages/hardhat/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "hardhat compile",
     "clean": "hardhat clean",
-    "dev": "hardhat node --hostname 0.0.0.0",
+    "dev": "hardhat node --hostname 0.0.0.0 --watch",
     "test": "cross-env TS_NODE_TRANSPILE_ONLY=1 hardhat test",
     "format": "prettier --write . --config .prettierrc.js",
     "lint": "eslint --cache -c .eslintrc.js --fix ."
@@ -33,6 +33,7 @@
     "ethers": "^5.5.2",
     "fs-extra": "^10.0.0",
     "hardhat": "^2.8.0",
+    "hardhat-deploy": "^0.9.22",
     "mocha": "^9.1.3",
     "prettier": "^2.5.1",
     "ts-node": "^10.4.0",
