--- a/packages/hardhat/package.json
+++ b/packages/hardhat/package.json
@@ -18,6 +18,8 @@
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.3",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
+    "@typechain/ethers-v5": "^8.0.5",
+    "@typechain/hardhat": "^3.1.0",
     "@types/chai": "^4.3.0",
     "@types/fs-extra": "^9.0.13",
     "@types/mocha": "^9.0.0",
@@ -37,6 +39,7 @@
     "mocha": "^9.1.3",
     "prettier": "^2.5.1",
     "ts-node": "^10.4.0",
+    "typechain": "^6.1.0",
     "typescript": "^4.5.4"
   }
 }
