--- a/package.json
+++ b/package.json
@@ -30,9 +30,10 @@
     "build": "yarn workspaces foreach -pi run build",
     "clean": "yarn workspaces foreach -pi run clean",
     "dev": "yarn workspaces foreach -pi run dev",
-    "test": "yarn workspaces foreach -pi run test",
     "format": "yarn workspaces foreach -pi run format",
-    "lint": "yarn workspaces foreach -pi run lint"
+    "lint": "yarn workspaces foreach -pi run lint",
+    "metrics": "yarn workspaces foreach -pi run metrics",
+    "test": "yarn workspaces foreach -pi run test"
   },
   "packageManager": "yarn@3.1.1"
 }
