--- a/packages/hardhat/.env.example
+++ b/packages/hardhat/.env.example
@@ -1,6 +1,8 @@
-INFURA_API_KEY=
 ALCHEMY_API_KEY=
+COINMARKETCAP_API_KEY=
+INFURA_API_KEY=
 
 FORKING=false
+REPORT_GAS=false
 
 MNEMONIC="test test test test test test test test test test test junk"
