--- a/packages/hardhat/package.json
+++ b/packages/hardhat/package.json
@@ -6,9 +6,10 @@
     "build": "hardhat compile",
     "clean": "hardhat clean",
     "dev": "hardhat node --hostname 0.0.0.0 --watch",
-    "test": "cross-env TS_NODE_TRANSPILE_ONLY=1 hardhat test",
     "format": "prettier --write . --config .prettierrc.js",
-    "lint": "eslint --cache -c .eslintrc.js --fix ."
+    "lint": "eslint --cache -c .eslintrc.js --fix .",
+    "metrics": "cross-env REPORT_GAS=true yarn test",
+    "test": "cross-env TS_NODE_TRANSPILE_ONLY=1 hardhat test"
   },
   "author": {
     "name": "Philipp Muens",
@@ -36,6 +37,7 @@
     "fs-extra": "^10.0.0",
     "hardhat": "^2.8.0",
     "hardhat-deploy": "^0.9.22",
+    "hardhat-gas-reporter": "^1.0.6",
     "mocha": "^9.1.3",
     "prettier": "^2.5.1",
     "ts-node": "^10.4.0",
