--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "scripts": {
     "build": "yarn workspaces foreach -pi run build",
     "clean": "yarn workspaces foreach -pi run clean",
+    "coverage": "yarn workspaces foreach -pi run coverage",
     "dev": "yarn workspaces foreach -pi run dev",
     "format": "yarn workspaces foreach -pi run format",
     "lint": "yarn workspaces foreach -pi run lint",
