--- a/packages/hardhat/.gitignore
+++ b/packages/hardhat/.gitignore
@@ -2,6 +2,8 @@ artifacts
 cache
 deployments/localhost
 
+coverage.json
+
 # Created by https://www.toptal.com/developers/gitignore/api/linux,macos,windows,vim,emacs,sublimetext,visualstudiocode,intellij+all,node,yarn,solidity
 # Edit at https://www.toptal.com/developers/gitignore?templates=linux,macos,windows,vim,emacs,sublimetext,visualstudiocode,intellij+all,node,yarn,solidity
 
