--- a/packages/hardhat/package.json
+++ b/packages/hardhat/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "build": "hardhat compile",
     "clean": "hardhat clean",
+    "coverage": "cross-env NODE_OPTIONS=\"--max-old-space-size=4096\" hardhat coverage",
     "dev": "hardhat node --hostname 0.0.0.0 --watch",
     "format": "prettier --write . --config .prettierrc.js",
     "lint": "eslint --cache -c .eslintrc.js --fix .",
@@ -40,6 +41,7 @@
     "hardhat-gas-reporter": "^1.0.6",
     "mocha": "^9.1.3",
     "prettier": "^2.5.1",
+    "solidity-coverage": "^0.7.17",
     "ts-node": "^10.4.0",
     "typechain": "^6.1.0",
     "typescript": "^4.5.4"
