--- a/packages/hardhat/package.json
+++ b/packages/hardhat/package.json
@@ -41,6 +41,7 @@
     "hardhat-gas-reporter": "^1.0.6",
     "mocha": "^9.1.3",
     "prettier": "^2.5.1",
+    "prettier-plugin-solidity": "^1.0.0-beta.19",
     "solidity-coverage": "^0.7.17",
     "ts-node": "^10.4.0",
     "typechain": "^6.1.0",
