--- a/packages/hardhat/package.json
+++ b/packages/hardhat/package.json
@@ -6,11 +6,14 @@
     "build": "hardhat compile",
     "clean": "hardhat clean",
     "coverage": "cross-env NODE_OPTIONS=\"--max-old-space-size=4096\" hardhat coverage",
+    "deploy": "hardhat --network $NETWORK deploy",
     "dev": "hardhat node --hostname 0.0.0.0 --watch",
+    "export": "hardhat --network $NETWORK export --export exports/$NETWORK.json",
     "format": "prettier --write . --config .prettierrc.js",
     "lint": "eslint --cache -c .eslintrc.js --fix . && solhint -c .solhintrc.js **/*.sol",
     "metrics": "cross-env REPORT_GAS=true yarn test",
-    "test": "cross-env TS_NODE_TRANSPILE_ONLY=1 hardhat test"
+    "test": "cross-env TS_NODE_TRANSPILE_ONLY=1 hardhat test",
+    "verify": "hardhat --network $NETWORK etherscan-verify --solc-input"
   },
   "author": {
     "name": "Philipp Muens",
