--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+.yarn/cache/**
 
 # Created by https://www.toptal.com/developers/gitignore/api/linux,macos,windows,vim,emacs,sublimetext,visualstudiocode,intellij+all,node,yarn
 # Edit at https://www.toptal.com/developers/gitignore?templates=linux,macos,windows,vim,emacs,sublimetext,visualstudiocode,intellij+all,node,yarn
