Gitignore localhost file in exports directory

--- a/packages/hardhat/.gitignore
+++ b/packages/hardhat/.gitignore
@@ -3,6 +3,7 @@ cache
 deployments/localhost
 
 coverage.json
+exports/localhost.json
 
 # Created by https://www.toptal.com/developers/gitignore/api/linux,macos,windows,vim,emacs,sublimetext,visualstudiocode,intellij+all,node,yarn,solidity
 # Edit at https://www.toptal.com/developers/gitignore?templates=linux,macos,windows,vim,emacs,sublimetext,visualstudiocode,intellij+all,node,yarn,solidity
