--- a/packages/next/package.json
+++ b/packages/next/package.json
@@ -1,12 +1,18 @@
 {
   "name": "next",
-  "private": true,
+  "version": "0.1.0",
+  "description": "Next.js Template for EVM-based dApps.",
   "scripts": {
-    "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "dev": "next dev",
+    "lint": "next lint",
+    "start": "next start"
   },
+  "author": {
+    "name": "Philipp Muens",
+    "url": "https://github.com/pmuens"
+  },
+  "license": "MIT",
   "dependencies": {
     "next": "12.0.7",
     "react": "17.0.2",
