--- a/packages/next/package.json
+++ b/packages/next/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "build": "next build",
     "dev": "next dev",
+    "format": "prettier --config .prettierrc.js --write .",
     "lint": "next lint",
     "start": "next start"
   },
@@ -23,6 +24,7 @@
     "@types/react": "17.0.38",
     "eslint": "8.5.0",
     "eslint-config-next": "12.0.7",
+    "prettier": "^2.5.1",
     "typescript": "4.5.4"
   }
 }
