--- a/packages/next/package.json
+++ b/packages/next/package.json
@@ -6,7 +6,7 @@
     "build": "next build",
     "dev": "next dev",
     "format": "prettier --config .prettierrc.js --write .",
-    "lint": "next lint",
+    "lint": "next lint --cache -c .eslintrc.js --fix .",
     "start": "next start"
   },
   "author": {
@@ -22,8 +22,10 @@
   "devDependencies": {
     "@types/node": "17.0.5",
     "@types/react": "17.0.38",
+    "@typescript-eslint/eslint-plugin": "^5.8.1",
     "eslint": "8.5.0",
     "eslint-config-next": "12.0.7",
+    "eslint-config-prettier": "^8.3.0",
     "prettier": "^2.5.1",
     "typescript": "4.5.4"
   }
