--- a/packages/next/package.json
+++ b/packages/next/package.json
@@ -4,6 +4,7 @@
   "description": "Next.js Template for EVM-based dApps.",
   "scripts": {
     "build": "next build",
+    "clean": "node scripts/clean.js",
     "dev": "next dev",
     "format": "prettier --config .prettierrc.js --write .",
     "lint": "next lint --cache -c .eslintrc.js --fix .",
@@ -20,12 +21,14 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@types/fs-extra": "^9.0.13",
     "@types/node": "17.0.5",
     "@types/react": "17.0.38",
     "@typescript-eslint/eslint-plugin": "^5.8.1",
     "eslint": "8.5.0",
     "eslint-config-next": "12.0.7",
     "eslint-config-prettier": "^8.3.0",
+    "fs-extra": "^10.0.0",
     "lint-staged": "^12.1.4",
     "prettier": "^2.5.1",
     "typescript": "4.5.4"
