--- a/package.json
+++ b/package.json
@@ -48,6 +48,13 @@
     "hardhat:metrics": "yarn workspace hardhat run metrics",
     "hardhat:test": "yarn workspace hardhat run test",
     "hardhat:verify": "yarn workspace hardhat run verify",
+    "next:build": "yarn workspace next run build",
+    "next:clean": "yarn workspace next run clean",
+    "next:dev": "yarn workspace next run dev",
+    "next:format": "yarn workspace next run format",
+    "next:lint": "yarn workspace next run lint",
+    "next:lint-staged": "yarn workspace next run lint-staged",
+    "next:start": "yarn workspace next run start",
     "postinstall": "husky install",
     "postpublish": "pinst --enable",
     "prepublishOnly": "pinst --disable"
