Fix lint-staged scripts

--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "dev": "yarn workspaces foreach -pi run dev",
     "format": "yarn workspaces foreach -pi run format",
     "lint": "yarn workspaces foreach -pi run lint",
-    "lint-staged": "yarn workspaces foreach -pi run lint-staged",
+    "lint-staged": "yarn workspaces foreach run lints",
     "metrics": "yarn workspaces foreach -pi run metrics",
     "test": "yarn workspaces foreach -pi run test",
     "hardhat:build": "yarn workspace hardhat run build",
@@ -44,7 +44,7 @@
     "hardhat:export": "yarn workspace hardhat run export",
     "hardhat:format": "yarn workspace hardhat run format",
     "hardhat:lint": "yarn workspace hardhat run lint",
-    "hardhat:lint-staged": "yarn workspace hardhat run lint-staged",
+    "hardhat:lint-staged": "yarn workspace hardhat run lints",
     "hardhat:metrics": "yarn workspace hardhat run metrics",
     "hardhat:test": "yarn workspace hardhat run test",
     "hardhat:verify": "yarn workspace hardhat run verify",
@@ -53,7 +53,7 @@
     "next:dev": "yarn workspace next run dev",
     "next:format": "yarn workspace next run format",
     "next:lint": "yarn workspace next run lint",
-    "next:lint-staged": "yarn workspace next run lint-staged",
+    "next:lint-staged": "yarn workspace next run lints",
     "next:start": "yarn workspace next run start",
     "postinstall": "husky install",
     "postpublish": "pinst --enable",
