--- a/packages/hardhat/package.json
+++ b/packages/hardhat/package.json
@@ -11,6 +11,7 @@
     "export": "hardhat --network $NETWORK export --export exports/$NETWORK.json",
     "format": "prettier --config .prettierrc.js --write .",
     "lint": "eslint --cache -c .eslintrc.js --fix . && solhint -c .solhintrc.js --fix **/*.sol",
+    "lints": "lint-staged",
     "metrics": "cross-env REPORT_GAS=true yarn test",
     "test": "cross-env TS_NODE_TRANSPILE_ONLY=1 hardhat test",
     "verify": "hardhat --network $NETWORK etherscan-verify --solc-input"
