--- a/packages/next/package.json
+++ b/packages/next/package.json
@@ -18,6 +18,7 @@
   "license": "MIT",
   "dependencies": {
     "next": "12.0.7",
+    "next-seo": "^4.28.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
