--- a/packages/next/package.json
+++ b/packages/next/package.json
@@ -17,6 +17,7 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@usedapp/core": "^0.7.3",
     "next": "12.0.7",
     "next-seo": "^4.28.1",
     "react": "17.0.2",
