--- a/packages/next/package.json
+++ b/packages/next/package.json
@@ -17,9 +17,12 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@modulz/design-system": "^0.6.2",
+    "@radix-ui/react-icons": "^1.0.3",
     "@usedapp/core": "^0.7.3",
     "next": "12.0.7",
     "next-seo": "^4.28.1",
+    "next-themes": "^0.0.15",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
