--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "clean": "yarn workspaces foreach -pi run clean",
     "coverage": "yarn workspaces foreach -pi run coverage",
     "dev": "yarn workspaces foreach -pi run dev",
+    "export": "yarn workspaces foreach -pi run export",
     "format": "yarn workspaces foreach -pi run format",
     "lint": "yarn workspaces foreach -pi run lint",
     "lint-staged": "yarn workspaces foreach run lints",
@@ -51,6 +52,7 @@
     "next:build": "yarn workspace next run build",
     "next:clean": "yarn workspace next run clean",
     "next:dev": "yarn workspace next run dev",
+    "next:export": "yarn workspace next run export",
     "next:format": "yarn workspace next run format",
     "next:lint": "yarn workspace next run lint",
     "next:lint-staged": "yarn workspace next run lints",
