Add deploy script

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "build": "yarn workspaces foreach -pi run build",
     "clean": "yarn workspaces foreach -pi run clean",
     "coverage": "yarn workspaces foreach -pi run coverage",
+    "deploy": "yarn workspaces foreach -pi run deploy",
     "dev": "yarn workspaces foreach -pi run dev",
     "export": "yarn workspaces foreach -pi run export",
     "format": "yarn workspaces foreach -pi run format",
@@ -51,6 +52,7 @@
     "hardhat:verify": "yarn workspace hardhat run verify",
     "next:build": "yarn workspace next run build",
     "next:clean": "yarn workspace next run clean",
+    "next:deploy": "yarn workspace next run deploy",
     "next:dev": "yarn workspace next run dev",
     "next:export": "yarn workspace next run export",
     "next:format": "yarn workspace next run format",
