--- a/packages/next/.gitignore
+++ b/packages/next/.gitignore
@@ -1,3 +1,4 @@
+.fleek.json
 
 # Created by https://www.toptal.com/developers/gitignore/api/linux,macos,windows,vim,emacs,sublimetext,visualstudiocode,intellij+all,node,yarn,nextjs
 # Edit at https://www.toptal.com/developers/gitignore?templates=linux,macos,windows,vim,emacs,sublimetext,visualstudiocode,intellij+all,node,yarn,nextjs
