--- a/packages/next/package.json
+++ b/packages/next/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "build": "next build",
     "clean": "node scripts/clean.js",
+    "deploy": "node scripts/deploy.js",
     "dev": "next dev",
     "export": "next export",
     "format": "prettier --config .prettierrc.js --write .",
@@ -25,6 +26,7 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@fleekhq/fleek-cli": "^0.1.8",
     "@types/fs-extra": "^9.0.13",
     "@types/node": "17.0.5",
     "@types/react": "17.0.38",
