Add multi-contract support

--- a/packages/next/.env.example
+++ b/packages/next/.env.example
@@ -1,5 +1,8 @@
 NEXT_PUBLIC_CHAIN_ID=31337
 NEXT_PUBLIC_RPC_URL=http://localhost:8545
 
-NEXT_PUBLIC_CONTRACT_ADDRESS=0x5FbDB2315678afecb367f032d93F642f64180aa3
-NEXT_PUBLIC_CONTRACT_ABI='["function increment()", "function decrement()", "function get() view returns (int256)", "function set(int256)"]'
+NEXT_PUBLIC_COUNTER_CONTRACT_ADDRESS=0x5FbDB2315678afecb367f032d93F642f64180aa3
+NEXT_PUBLIC_COUNTER_CONTRACT_ABI='["function increment()","function decrement()","function get() view returns (int256)","function set(int256)"]'
+
+NEXT_PUBLIC_MESSAGES_CONTRACT_ADDRESS=0xe7f1725E7734CE288F8367e1Bb143E90bb3F0512
+NEXT_PUBLIC_MESSAGES_CONTRACT_ABI='["function createMessage(string) returns (uint256)","function updateMessage(uint256,string) returns (bool)","function removeMessage(uint256) returns (bool)","function getMessage(uint256) view returns (uint256,string,address,uint256,uint256,bool)","function nextId() view returns (uint256)","function messages(uint256) view returns (uint256,string,address,uint256,uint256,bool)"]'
