--- a/packages/next/.env.example
+++ b/packages/next/.env.example
@@ -1,4 +1,5 @@
 NEXT_PUBLIC_CHAIN_ID=31337
+NEXT_PUBLIC_REFRESH_INTERVAL=5000
 NEXT_PUBLIC_RPC_URL=http://localhost:8545
 
 NEXT_PUBLIC_MESSAGES_CONTRACT_ADDRESS=0x5FbDB2315678afecb367f032d93F642f64180aa3
