--- a/packages/next/package.json
+++ b/packages/next/package.json
@@ -28,6 +28,7 @@
     "next-seo": "^4.28.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "swr": "^1.1.2",
     "wagmi": "^0.1.6"
   },
   "devDependencies": {
