Rename hardhat package

--- a/package.json
+++ b/package.json
@@ -38,18 +38,18 @@
     "lint-staged": "yarn workspaces foreach run lints",
     "metrics": "yarn workspaces foreach -pi run metrics",
     "test": "yarn workspaces foreach -pi run test",
-    "hardhat:build": "yarn workspace hardhat run build",
-    "hardhat:clean": "yarn workspace hardhat run clean",
-    "hardhat:coverage": "yarn workspace hardhat run coverage",
-    "hardhat:deploy": "yarn workspace hardhat run deploy",
-    "hardhat:dev": "yarn workspace hardhat run dev",
-    "hardhat:export": "yarn workspace hardhat run export",
-    "hardhat:format": "yarn workspace hardhat run format",
-    "hardhat:lint": "yarn workspace hardhat run lint",
-    "hardhat:lint-staged": "yarn workspace hardhat run lints",
-    "hardhat:metrics": "yarn workspace hardhat run metrics",
-    "hardhat:test": "yarn workspace hardhat run test",
-    "hardhat:verify": "yarn workspace hardhat run verify",
+    "hardhat:build": "yarn workspace @astralis/hardhat run build",
+    "hardhat:clean": "yarn workspace @astralis/hardhat run clean",
+    "hardhat:coverage": "yarn workspace @astralis/hardhat run coverage",
+    "hardhat:deploy": "yarn workspace @astralis/hardhat run deploy",
+    "hardhat:dev": "yarn workspace @astralis/hardhat run dev",
+    "hardhat:export": "yarn workspace @astralis/hardhat run export",
+    "hardhat:format": "yarn workspace @astralis/hardhat run format",
+    "hardhat:lint": "yarn workspace @astralis/hardhat run lint",
+    "hardhat:lint-staged": "yarn workspace @astralis/hardhat run lints",
+    "hardhat:metrics": "yarn workspace @astralis/hardhat run metrics",
+    "hardhat:test": "yarn workspace @astralis/hardhat run test",
+    "hardhat:verify": "yarn workspace @astralis/hardhat run verify",
     "next:build": "yarn workspace next run build",
     "next:clean": "yarn workspace next run clean",
     "next:deploy": "yarn workspace next run deploy",
