Rename next package

--- a/package.json
+++ b/package.json
@@ -50,15 +50,15 @@
     "hardhat:metrics": "yarn workspace @astralis/hardhat run metrics",
     "hardhat:test": "yarn workspace @astralis/hardhat run test",
     "hardhat:verify": "yarn workspace @astralis/hardhat run verify",
-    "next:build": "yarn workspace next run build",
-    "next:clean": "yarn workspace next run clean",
-    "next:deploy": "yarn workspace next run deploy",
-    "next:dev": "yarn workspace next run dev",
-    "next:export": "yarn workspace next run export",
-    "next:format": "yarn workspace next run format",
-    "next:lint": "yarn workspace next run lint",
-    "next:lint-staged": "yarn workspace next run lints",
-    "next:start": "yarn workspace next run start",
+    "next:build": "yarn workspace @astralis/next run build",
+    "next:clean": "yarn workspace @astralis/next run clean",
+    "next:deploy": "yarn workspace @astralis/next run deploy",
+    "next:dev": "yarn workspace @astralis/next run dev",
+    "next:export": "yarn workspace @astralis/next run export",
+    "next:format": "yarn workspace @astralis/next run format",
+    "next:lint": "yarn workspace @astralis/next run lint",
+    "next:lint-staged": "yarn workspace @astralis/next run lints",
+    "next:start": "yarn workspace @astralis/next run start",
     "postinstall": "husky install",
     "postpublish": "pinst --enable",
     "prepublishOnly": "pinst --disable"
